fix dumb menu overlap

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -2350,7 +2350,7 @@ object, embed, video, iframe {
 
                     div.menu {
                         background: none repeat scroll 0 0 rgba(0, 0, 0, 0.9);
-                        bottom: 64px;
+                        bottom: 55px;
                         height: 92px;
                         margin-left: 2px;
                         overflow: auto;
